telling what is data list tag in comments

--- a/dataList.html
+++ b/dataList.html
@@ -36,6 +36,8 @@
             <option value="Rajastan">
             <option value="Assam">
             <option value="Sikkim">
+                
+                <!-- we can customize the datalist tag by using the input list Attribute -->
 
 
     </datalist>
